se siguio trabajando en diseño responsivo y media queries

--- a/style.css
+++ b/style.css
@@ -7,22 +7,17 @@
     font-family: "Inter", sans-serif;
 }
 
-@media (max-width:375px) {
-
-body {
-background-color: hsl(0, 0%, 8%);
-}
 
 
-
-
-
-
-}
+/*****************************/
+/*********  MOBILE  **********/
+/*****************************/
 
 
 body{
     background-color:hsl(0, 0%, 8%);
+    margin: 10px;
+    
 }
 
 
@@ -31,37 +26,39 @@ body{
     background-color: hsl(0, 0%, 12%);
     color: hsl(0, 0%, 100%);
     border-radius: 10px;
+    margin: 20px auto;
+    padding: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 
-
 .img> img {
-    border-radius: 200px;
-    margin-bottom: 10px;
-    gap: 15px;
-
+    border-radius: 50%;
 }
+
 .titulo_conteiner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 25px;
 }
 
 
-.localizacion {
+.localizacion-persona {
     font-size: 14px;
     color: hsl(75, 94%, 57%);    
     margin-top: 10px;
 
 }
-.parrafo {
+.parrafo-descriptivo{
     font-size: 14px;
     margin: 35px 0 25px;
 }
  
 
-.sitios_web> ul{
+.sitios-web> ul{
     font-weight: 700;
     padding: 10px 90px;
     background-color: hsl(0, 0%, 20%);
@@ -73,6 +70,21 @@ body{
 
 }
 
+/******************************/
+/*********  DESKTOP  **********/
+/******************************/
 
+@media (width>900px){
+    
+    body {
+        margin: 10%;
+        padding: 0;
+    }
 
+    .conteiner{
+        margin: 25px;
+        padding: 0 auto;
 
+}
+
+}
